# games-101-homework-s2021

./: README.md
1/Assignment1/: CMakeLists.txt
1/Assignment1/src/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
2/代码框架/: CMakeLists.txt  compile_and_run.bat
2/代码框架/src/: Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
3 Rasterizer/Assignment3/: CMakeLists.txt  compile_and_run.bat
3 Rasterizer/Assignment3/includes/: OBJ_Loader.h
3 Rasterizer/Assignment3/src/: Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  custom_math.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
4 Bezier Curve/Assignment4/: compile_and_run.bat
4/Assignment4/: CMakeLists.txt
4/Assignment4/src/: main.cpp
5/Assignment5/: CMakeLists.txt  compile_and_run.bat  preview.ppm
5/Assignment5/src/: Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
6/Assignment6/: CMakeLists.txt  compile_and_run.bat  preview.ppm
6/Assignment6/src/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
7 Path Tracing/Assignment7/: compile_and_run.bat  preview.ppm
7 Path Tracing/Assignment7/src/: Intersection.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  custom_math.hpp  main.cpp
7/Assignment7/: CMakeLists.txt  preview.ppm
7/Assignment7/includes/: OBJ_Loader.hpp
(+11 files in other folders)
